fix: add missing sync run status
related-to kestra-io/kestra#4354